@@ -1,3 +1,11 @@
+2023-02-20  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-asm.c (pkl_asm_insn_cmp): Support values of type
+	any.
+	* testsuite/poke.pkl/eq-any-array-3.pk: New test.
+	* testsuite/poke.pkl/neq-array-3.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
 2023-02-19  Bruno Haible  <bruno@clisp.org>
 
 	build: Regenerate pvm-vm.h, pvm-vm1.c, pvm-vm2.c when jitter has changed.
